--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "tauri-dev": "tauri dev",
+    "dev": "tauri dev",
     "tauri": "tauri",
-    "dev": "vite",
+    "dev-web": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-global-shortcut": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "vue": "^3.5.13"
   },
