--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     /* Linting */
     "strict": false
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
