--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tauri dev",
     "tauri": "tauri",
     "dev-web": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,15 +16,26 @@
     "@tauri-apps/plugin-global-shortcut": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-store": "~2",
-    "vue": "^3.5.13"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "3"
   },
   "devDependencies": {
+    "@arco-design/web-react": "^2.63.1",
     "@tauri-apps/cli": "^2",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "clsx": "^2.1.1",
     "less": "^4.3.0",
+    "path-browserify": "^1.0.1",
+    "qrcode.react": "^4.2.0",
+    "rc-resize-observer": "^1.4.0",
+    "sharp": "^0.33.5",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3",
-    "vue-tsc": "^2.1.10"
+    "vite": "^6.0.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
