--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tauri-apps/plugin-global-shortcut": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-store": "~2",
+    "ahooks": "^3.8.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
