--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = "1.0.140"
 tauri-plugin-store = "2"
 tauri-plugin-dialog = "2"
 rand = "0.9.0"
+urlencoding = "2.1.3"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
