--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,8 @@ tauri-plugin-store = "2"
 tauri-plugin-dialog = "2"
 rand = "0.9.0"
 urlencoding = "2.1.3"
+port-killer = "0.1.0"
+tokio = { version = "1.45.0", features = ["full"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
