--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tauri dev",
-    "tauri": "tauri",
+    "tauri-build": "tauri build",
     "dev-web": "vite",
     "build": "vite build",
     "preview": "vite preview"
