--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = ["tray-icon", "image-png"] }
+tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
 tauri-plugin-opener = "2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
@@ -28,6 +28,8 @@ rand = "0.9.0"
 urlencoding = "2.1.3"
 port-killer = "0.1.0"
 tokio = { version = "1.45.0", features = ["full"] }
+enigo = "0.3.0"
+tauri-plugin-clipboard-manager = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
