--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "release-it": "17.2.1",
     "tailwindcss": "3"
   },
   "devDependencies": {
