--- a/.release-it.json
+++ b/.release-it.json
@@ -1,6 +1,6 @@
 {
   "git": {
-    "requireBranch": "master",
+    "requireBranch": "main",
     "commitMessage": "chore(release): release v${version}",
     "commit": true,
     "tag": true,
