--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tauri build",
     "dev-web": "vite",
     "build-web": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "release-it": "release-it patch --ci"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
