--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,3 +34,4 @@ tauri-plugin-clipboard-manager = "2"
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
 tauri-plugin-global-shortcut = "2.0.0"
+tauri-plugin-updater = "2"
