--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rmst-tools-tauri"
 version = "0.1.8"
-description = "A Tauri App"
+description = "a tools by tauri"
 authors = ["人美声甜"]
 edition = "2021"
 
@@ -35,6 +35,7 @@ port-killer = "0.1.0"
 tokio = { version = "1.45.0", features = ["full"] }
 enigo = "0.3.0"
 tauri-plugin-clipboard-manager = "2"
+tauri-plugin-os = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
