--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,7 @@ tokio = { version = "1.45.0", features = ["full"] }
 enigo = "0.3.0"
 tauri-plugin-clipboard-manager = "2"
 tauri-plugin-os = "2"
+tauri-plugin-process = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
