--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,8 +115,8 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
-          tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
-          releaseName: 'App v__VERSION__'
+          tagName: ${{ github.ref_name }}
+          releaseName: 'rmst-tools-tauri v__VERSION__'
           releaseBody: '发布新版本啦啦啦!'
           releaseDraft: false
           prerelease: false
