--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rmst-tools-tauri"
-version = "0.1.16"
+version = "0.1.14"
 description = "a tools by tauri"
 authors = ["人美声甜"]
 edition = "2021"
@@ -37,6 +37,7 @@ enigo = "0.3.0"
 tauri-plugin-clipboard-manager = "2"
 tauri-plugin-os = "2"
 tauri-plugin-process = "2"
+tauri-plugin-log = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
