--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.4",
     "clsx": "^2.1.1",
+    "cross-spawn": "^7.0.6",
     "less": "^4.3.0",
     "path-browserify": "^1.0.1",
     "qrcode.react": "^4.2.0",
