--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tauri dev",
     "build": "tauri build",
+    "build-with-env": "tsx ./scripts/build.ts",
     "dev-web": "vite",
     "build-web": "vite build",
     "preview": "vite preview",
@@ -43,6 +44,7 @@
     "qrcode.react": "^4.2.0",
     "rc-resize-observer": "^1.4.0",
     "sharp": "^0.33.5",
+    "tsx": "^4.19.4",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   },
