--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,6 +44,7 @@ log = "0.4.27"
 tauri-plugin-single-instance = "2"
 tauri-plugin-global-shortcut = "2.0.0"
 tauri-plugin-updater = "2"
+tauri-plugin-autostart = "2"
 
 
 [profile.release]
