--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "version": "0.1.31",
   "type": "module",
   "scripts": {
-    "dev": "tauri dev -- --profile fast-dev",
-    "build": "tauri build",
-    "build-with-env": "tsx ./scripts/build.ts",
+    "dev": "tauri dev",
+    "build": "tsx ./scripts/build.ts",
+    "tauri": "tauri",
     "dev-web": "vite",
     "build-web": "vite build",
     "preview": "vite preview",
     "release-it": "release-it patch --ci"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2",
+    "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-autostart": "~2",
     "@tauri-apps/plugin-clipboard-manager": "~2",
     "@tauri-apps/plugin-dialog": "~2",
@@ -21,9 +21,10 @@
     "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-os": "~2",
-    "@tauri-apps/plugin-process": "~2.2.1",
+    "@tauri-apps/plugin-process": "^2.2.0",
+    "@tauri-apps/plugin-shell": "2.2.0",
     "@tauri-apps/plugin-store": "~2",
-    "@tauri-apps/plugin-updater": "~2",
+    "@tauri-apps/plugin-updater": "2.3.0",
     "ahooks": "^3.8.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
@@ -34,7 +35,7 @@
   },
   "devDependencies": {
     "@arco-design/web-react": "^2.63.1",
-    "@tauri-apps/cli": "^2",
+    "@tauri-apps/cli": "^2.5.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.4.0",
