--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rmst-tools-tauri"
-version = "0.1.31"
+version = "0.1.3"
 description = "a tools by tauri"
 authors = ["人美声甜"]
 edition = "2021"
@@ -24,53 +24,27 @@ tauri = { version = "2", features = [
   "image-ico",
   "devtools",
 ] }
-tauri-plugin-opener = "2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-tauri-plugin-store = "2"
-tauri-plugin-dialog = "2"
 rand = "0.9.0"
 urlencoding = "2.1.3"
 port-killer = "0.1.0"
 tokio = { version = "1.45.0", features = ["full"] }
 enigo = "0.3.0"
-tauri-plugin-clipboard-manager = "2"
-tauri-plugin-os = "2"
-tauri-plugin-process = "2"
-tauri-plugin-log = "2"
 log = "0.4.27"
+tauri-plugin-opener = "2"
+tauri-plugin-store = "2"
+tauri-plugin-os = "2"
+tauri-plugin-log = "2"
+tauri-plugin-shell = "2.2.0"
+tauri-plugin-dialog = "2.2.0"
+tauri-plugin-fs = "2.2.0"
+tauri-plugin-process = "2.2.0"
+tauri-plugin-clipboard-manager = "2.2.2"
+tauri-plugin-deep-link = "2.2.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
-tauri-plugin-global-shortcut = "2.0.0"
-tauri-plugin-updater = "2"
-tauri-plugin-autostart = "2"
-
-
-[profile.release]
-panic = "abort"
-codegen-units = 1
-lto = true
-opt-level = "s"
-strip = true
-
-[profile.dev]
-incremental = true
-debug = 0
-
-[profile.fast-release]
-inherits = "release" # 继承 release 的配置
-panic = "abort"      # 与 release 相同
-codegen-units = 256  # 增加编译单元，提升编译速度
-lto = false          # 禁用 LTO，提升编译速度
-opt-level = 0        # 禁用优化，大幅提升编译速度
-debug = true         # 保留调试信息
-strip = false        # 不剥离符号，保留调试信息
-
-[profile.fast-dev]
-inherits = "dev"    # 继承 dev 的配置
-codegen-units = 256 # 增加编译单元，提升编译速度
-opt-level = 0       # 禁用优化，进一步提升编译速度
-incremental = true  # 启用增量编译
-debug = true        # 保留调试信息
-strip = false       # 不剥离符号，保留调试信息
+tauri-plugin-autostart = "2.2.0"
+tauri-plugin-global-shortcut = "2.2.0"
+tauri-plugin-updater = "2.6.1"
