--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@arco-design/web-react": "^2.63.1",
     "@tauri-apps/cli": "^2.5.0",
+    "@types/node": "^22.15.19",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.4.0",
