--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
     "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-os": "~2",
-    "@tauri-apps/plugin-process": "^2.2.0",
+    "@tauri-apps/plugin-process": "~2",
     "@tauri-apps/plugin-shell": "2.2.0",
     "@tauri-apps/plugin-store": "~2",
-    "@tauri-apps/plugin-updater": "2.3.0",
+    "@tauri-apps/plugin-updater": "~2.7.1",
     "ahooks": "^3.8.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "release-it": "19.0.2",
     "tailwindcss": "3"
   },
   "devDependencies": {
@@ -49,7 +48,8 @@
     "sharp": "^0.33.5",
     "tsx": "^4.19.4",
     "typescript": "~5.6.2",
-    "vite": "^5.4.18"
+    "vite": "^5.4.18",
+    "release-it": "19.0.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
