--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,10 +24,10 @@ tauri = { version = "2", features = [
   "image-ico",
   "devtools",
 ] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 rand = "0.9.0"
-urlencoding = "2.1.3"
+# urlencoding = "2.1.3"
 port-killer = "0.1.0"
 tokio = { version = "1.45.0", features = ["full"] }
 enigo = "0.3.0"
@@ -38,13 +38,13 @@ tauri-plugin-os = "2"
 tauri-plugin-log = "2"
 tauri-plugin-shell = "2.2.0"
 tauri-plugin-dialog = "2.2.0"
-tauri-plugin-fs = "2.2.0"
+# tauri-plugin-fs = "2.2.0"
 tauri-plugin-process = "2"
 tauri-plugin-clipboard-manager = "2.2.2"
-tauri-plugin-deep-link = "2.2.0"
+# tauri-plugin-deep-link = "2.2.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-single-instance = "2"
-tauri-plugin-autostart = "2.2.0"
-tauri-plugin-global-shortcut = "2.2.0"
+# tauri-plugin-single-instance = "2"
+# tauri-plugin-autostart = "2.2.0"
+# tauri-plugin-global-shortcut = "2.2.0"
 tauri-plugin-updater = "2"
