--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-autostart": "~2",
-    "@tauri-apps/plugin-clipboard-manager": "~2",
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-global-shortcut": "^2.2.0",
     "@tauri-apps/plugin-log": "~2",
@@ -45,11 +44,11 @@
     "path-browserify": "^1.0.1",
     "qrcode.react": "^4.2.0",
     "rc-resize-observer": "^1.4.0",
+    "release-it": "19.0.2",
     "sharp": "^0.33.5",
     "tsx": "^4.19.4",
     "typescript": "~5.6.2",
-    "vite": "^5.4.18",
-    "release-it": "19.0.2"
+    "vite": "^5.4.18"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
