--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,7 +40,7 @@ tauri-plugin-shell = "2.2.0"
 tauri-plugin-dialog = "2.2.0"
 # tauri-plugin-fs = "2.2.0"
 tauri-plugin-process = "2"
-tauri-plugin-clipboard-manager = "2.2.2"
+# tauri-plugin-clipboard-manager = "2.2.2"
 # tauri-plugin-deep-link = "2.2.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
