--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rmst-tools-tauri"
-version = "0.2.13"
+version = "0.2.0"
 description = "a tools by tauri"
 authors = ["人美声甜"]
 edition = "2021"
@@ -28,7 +28,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rand = "0.9.0"
 # urlencoding = "2.1.3"
-port-killer = "0.1.0"
+# port-killer = "0.1.0"
 tokio = { version = "1.45.0", features = ["full"] }
 enigo = "0.3.0"
 log = "0.4.27"
@@ -36,7 +36,7 @@ tauri-plugin-opener = "2"
 tauri-plugin-store = "2"
 tauri-plugin-os = "2"
 tauri-plugin-log = "2"
-tauri-plugin-shell = "2.2.0"
+# tauri-plugin-shell = "2.2.0"
 tauri-plugin-dialog = "2.2.0"
 # tauri-plugin-fs = "2.2.0"
 tauri-plugin-process = "2"
