--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,8 +29,8 @@ serde_json = "1"
 rand = "0.9.0"
 # urlencoding = "2.1.3"
 # port-killer = "0.1.0"
-tokio = { version = "1.45.0", features = ["full"] }
-enigo = "0.3.0"
+# tokio = { version = "1.45.0", features = ["full"] }
+# enigo = "0.3.0"
 log = "0.4.27"
 tauri-plugin-opener = "2"
 tauri-plugin-store = "2"
