--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,15 +36,12 @@ tauri-plugin-opener = "2"
 tauri-plugin-store = "2"
 tauri-plugin-os = "2"
 tauri-plugin-log = "2"
-# tauri-plugin-shell = "2.2.0"
 tauri-plugin-dialog = "2.2.0"
-# tauri-plugin-fs = "2.2.0"
 tauri-plugin-process = "2"
-# tauri-plugin-clipboard-manager = "2.2.2"
-# tauri-plugin-deep-link = "2.2.0"
+tauri-plugin-clipboard-manager = "2.2.2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-# tauri-plugin-single-instance = "2"
-# tauri-plugin-autostart = "2.2.0"
-# tauri-plugin-global-shortcut = "2.2.0"
+tauri-plugin-single-instance = "2"
+tauri-plugin-autostart = "2.2.0"
+tauri-plugin-global-shortcut = "2.2.0"
 tauri-plugin-updater = "2"
