--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rmst-tools-tauri"
-version = "0.2.16"
+version = "0.2.11"
 description = "a tools by tauri"
 authors = ["人美声甜"]
 edition = "2021"
@@ -30,7 +30,7 @@ rand = "0.9.0"
 # urlencoding = "2.1.3"
 # port-killer = "0.1.0"
 # tokio = { version = "1.45.0", features = ["full"] }
-# enigo = "0.3.0"
+enigo = "0.3.0"
 log = "0.4.27"
 tauri-plugin-opener = "2"
 tauri-plugin-store = "2"
@@ -38,10 +38,10 @@ tauri-plugin-os = "2"
 tauri-plugin-log = "2"
 tauri-plugin-dialog = "2.2.0"
 tauri-plugin-process = "2"
-# tauri-plugin-clipboard-manager = "2.2.2"
+tauri-plugin-clipboard-manager = "2.2.2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-# tauri-plugin-single-instance = "2"
-# tauri-plugin-autostart = "2.2.0"
-# tauri-plugin-global-shortcut = "2.2.0"
+tauri-plugin-single-instance = "2"
+tauri-plugin-autostart = "2.2.0"
+tauri-plugin-global-shortcut = "2.2.0"
 tauri-plugin-updater = "2"
