--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rmst-tools-tauri"
-version = "0.2.22"
+version = "0.2.1"
 description = "a tools by tauri"
 authors = ["人美声甜"]
 edition = "2021"
@@ -41,7 +41,7 @@ tauri-plugin-process = "2"
 tauri-plugin-clipboard-manager = "2.2.2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-single-instance = "2"
+# tauri-plugin-single-instance = "2"
 tauri-plugin-autostart = "2.2.0"
 tauri-plugin-global-shortcut = "2.2.0"
 tauri-plugin-updater = "2"
